<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#304769"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Jenis Pengguna"
            android:textColor="#fff"
            android:textSize="18sp"/>

        <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_role"
            android:padding="10dp"
        android:orientation="vertical">
            <RadioButton
                android:id="@+id/rb_alumni"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Alumni"
                android:textColor="#fff"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/rb_pengguna"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="Pengguna Alumni"
                android:textSize="18sp"/>
        </RadioGroup>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#f05924"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/already_having_account"
            android:textColor="#ccc" />

        <Button
            android:id="@+id/btnRegisterLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#aaa"
            android:text="@string/log_in"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>